# python_hk_event_search

./: .gitignore  LICENSE  README.md  cityu.py  cityu_mba.py  common_utils.py  environment.yml  eventbrite.py  gdg_hk.py  hkbu.py  hku.py  luma.py  main.py  meetup.py  polyu.py  pyproject.toml
readme_files/: run_with_conda.md
