[project]
name = "python-hk-event-search"
version = "0.1.0"
description = "Search for Hong Kong events from various event platforms"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "MIT"
dependencies = [
    "requests-html>=0.10.0",
    "beautifulsoup4>=4.12.2",
    "lxml>=5.0.0",
    "lxml-html-clean",
    "selenium>=4.15.2",
]
